# patient-app

./: .gitignore  MEMORY.md  parse_dump.py  window_dump.xml
patient-app/: gradle.properties
patient-app/androidApp/: build.gradle.kts
patient-app/androidApp/src/androidMain/: AndroidManifest.xml
patient-app/androidApp/src/androidMain/res/drawable/: docease_fg.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
patient-app/androidApp/src/androidMain/res/drawable-v24/: ic_docease.xml
patient-app/androidApp/src/androidMain/res/mipmap-anydpi-v26/: ic_docease.xml
patient-app/androidApp/src/androidMain/res/values/: strings.xml
patient-app/shared/: build.gradle.kts
patient-app/shared/src/androidMain/kotlin/webrtc/: AndroidWebRTCManager.kt  WebRTC.android.kt
patient-app/shared/src/commonMain/kotlin/: App.kt
patient-app/shared/src/commonMain/kotlin/data/model/: Models.kt
patient-app/shared/src/commonMain/kotlin/data/remote/: NetworkService.kt
patient-app/shared/src/commonMain/kotlin/ui/screens/: DashboardScreen.kt  DoctorListScreen.kt  LoginScreen.kt  VideoCallScreen.kt
patient-app/shared/src/commonMain/kotlin/webrtc/: WebRTC.kt
patient-app/shared/src/desktopMain/kotlin/webrtc/: WebRTC.desktop.kt
patient-app/shared/src/iosMain/kotlin/webrtc/: WebRTC.ios.kt
teleconsult-backend/: build.gradle.kts  settings.gradle.kts
teleconsult-backend/src/main/kotlin/com/teleconsult/: Application.kt
teleconsult-sdk/: Cargo.toml  android_build.ps1  ios_build.sh
teleconsult-sdk/src/: lib.rs  tests.rs
(+4 files in other folders)
