[package]
name = "teleconsult-sdk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "teleconsult_sdk"

[dependencies]
uniffi = { version = "0.28", features = ["tokio", "cli"] }
vodozemac = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]
